source/Styles.css
@import url("https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Kalam:wght@300&family=Rubik+Wet+Paint&family=Satisfy&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Nosifer&display=swap");

body {
  background-color: black;
  background-image: url("./Assets/home-table.png");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  color: white;
  padding: 0px;
  margin: 0px;
  height: 100vh;
}

h1 {
  text-align: center;
  font-family: "Rubik Wet Paint", cursive;
  font-size: 7vmin;
}

form {
  border-width: 0px;
  border-color: transparent;
  outline-width: 0px;
}

